2008-01-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: move AM_PROG_CC_C_O towards the top, to try to keep
	things readable. I know, it's not possible :-)

2008-01-16  Christian Persch  <chpe@gnome.org>

	* configure.in: Use AM_PROG_CC_C_O. Bug #509781, patch by Christian
	Kirbach.

2008-01-15  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.21.90.

==================== 2.21.5 ====================

2008-01-15  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.21.5

2008-01-14  Federico Mena Quintero  <federico@novell.com>

	* configure.in: Remove the check for _NL_MEASUREMENT_MEASUREMENT.

2008-01-14  Federico Mena Quintero  <federico@novell.com>

	INTLCLOCK MERGE ENDS HERE

	* applets/clock/*: Merged the International Clock applet into
	applets/clock.

2008-01-02  Federico Mena Quintero  <federico@novell.com>

	* configure.in: Add a test for _NL_MEASUREMENT_MEASUREMENT.

2008-01-02  Federico Mena Quintero  <federico@novell.com>

	* configure.in (CLOCK_MECHANISM): Check the libraries that the
	clock / timezone mechanism needs.

2007-12-05  Federico Mena Quintero  <federico@novell.com>

	* configure.in: Check for extra modules needed for the clock
	applet:  rsvg, d-bus, polkit.

	INTLCLOCK MERGE BEGINS HERE

2007-10-15  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.20.2.

==================== 2.20.1 ====================

2007-10-15  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.20.1

2007-09-18  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.20.1.

==================== 2.20.0.1 ====================

2007-09-18  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.20.0.1

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.20.1.

==================== 2.20.0 ====================

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: