@@ -330,6 +330,7 @@ icons/16x16/Makefile
 icons/22x22/Makefile
 icons/24x24/Makefile
 icons/32x32/Makefile
+icons/48x48/Makefile
 icons/scalable/Makefile
 gnome-panel/Makefile
 gnome-panel/gnome-panel.desktop.in
