@@ -1,3 +1,10 @@
+2008-01-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in:
+	* icons/Makefile.am:
+	* icons/48x48/*: Add a 48x48 version of gnome-panel.svg, which is
+	one of the more frequently rendered svgs on the desktop.
+
 2008-01-21  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: move AM_PROG_CC_C_O towards the top, to try to keep
